Adjust the overflow on the .quiz-area to scroll. This will prevent the content from overlaping in case of very small screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ header > h1 > i {
     border: solid 1px navy;
     border-radius: 20px;
     background-color: #fafafa;
+    overflow: scroll;
 }
 
 .quiz-area > h2 {
